# slicey

./: .gitignore  Cargo.toml  README.md
slicey-derive/: Cargo.toml  README.md
slicey-derive/src/: lib.rs  spanned.rs
src/: lib.rs  sliced.rs  spanned.rs
