[package]
name = "slicey"
description = "Ways to associate data with parts of a string."
version = "0.1.1"
authors = ["Sol Wolf<wolfendenbuild@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/swolfenden9/slicey"
documentation = "https://docs.rs/slicey/latest/slicey"
readme = "README.md"
keywords = ["slice", "span"]

[dependencies]
slicey-derive = { version = "0.1.0", path = "slicey-derive" }
